// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieDetails component should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-row css-dev-only-do-not-override-qnu6hi"
  >
    <div
      class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
    >
      <div
        class="ant-carousel css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="slick-slider slick-initialized"
          dir="ltr"
        >
          <div
            class="slick-list"
          >
            <div
              class="slick-track"
              style="opacity: 1;"
            >
              <div
                aria-hidden="false"
                class="slick-slide slick-active slick-current"
                data-index="0"
                style="outline: none; width: 0px; position: relative; left: 0px; opacity: 1; z-index: 999; transition: opacity 700ms ease, visibility 700ms ease;"
                tabindex="-1"
              >
                <div>
                  <div
                    class="movie-image"
                    style="width: 100%; display: inline-block;"
                    tabindex="-1"
                  >
                    <img
                      alt="test/title"
                      src="https://image.tmdb.org/t/p/original/image"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <ul
            class="slick-dots slick-dots-bottom"
            style="display: block;"
          >
            <li
              class="slick-active"
            >
              <button>
                1
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    class="container top-margin"
  >
    <div
      class="ant-row css-dev-only-do-not-override-qnu6hi"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-qnu6hi ant-flex-align-center ant-flex-gap-middle"
          style="margin-bottom: 24px;"
        >
          <h1
            class="ant-typography css-dev-only-do-not-override-qnu6hi"
            style="margin-bottom: 0px;"
          >
            test/title (1999)
          </h1>
          <button
            class="ant-btn css-dev-only-do-not-override-qnu6hi ant-btn-circle ant-btn-text ant-btn-icon-only"
            data-testid="addMovieToListPopover"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="plus-circle"
                class="anticon anticon-plus-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="plus-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
                  />
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-qnu6hi ant-btn-circle ant-btn-text ant-btn-icon-only"
            data-testid="addToFavoriteBtn"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="heart"
                class="anticon anticon-heart"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="heart"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M923 283.6a260.04 260.04 0 00-56.9-82.8 264.4 264.4 0 00-84-55.5A265.34 265.34 0 00679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 00-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-qnu6hi ant-btn-circle ant-btn-text ant-btn-icon-only"
            data-testid="addToWatchlistBtn"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="book"
                class="anticon anticon-book"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="book"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M832 64H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zm-260 72h96v209.9L621.5 312 572 347.4V136zm220 752H232V136h280v296.9c0 3.3 1 6.6 3 9.3a15.9 15.9 0 0022.3 3.7l83.8-59.9 81.4 59.4c2.7 2 6 3.1 9.4 3.1 8.8 0 16-7.2 16-16V136h64v752z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-qnu6hi"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          Overview
        </h3>
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          test/overview
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <img
            alt="imdb"
            height="24"
            src="test-file-stub"
            title="imdb rating"
          />
          <b>
             : 
          </b>
          <span>
            9
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Status: 
          </b>
          <span>
            test/status
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Original Language: 
          </b>
          <span>
            English
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Country: 
          </b>
          <span>
            United States of America
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Runtime: 
          </b>
          <span>
            2h 30m
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Budget: 
          </b>
          <span>
            $1,000,000
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Revenue: 
          </b>
          <span>
            $3,000,000
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Genres: 
          </b>
          <div
            class="ant-flex css-dev-only-do-not-override-qnu6hi"
            style="display: inline-flex; gap: 4px;"
          >
            <span
              class="ant-tag css-dev-only-do-not-override-qnu6hi"
            >
              TEST/GENRE
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Rating: 
          </b>
          <span
            class="ant-tag css-dev-only-do-not-override-qnu6hi"
          >
            PG-13
          </span>
        </div>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-qnu6hi ant-divider-horizontal"
        role="separator"
      />
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          Cast
        </h3>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-row css-dev-only-do-not-override-qnu6hi"
          style="margin-left: -12px; margin-right: -12px; row-gap: 16px;"
        >
          <div
            class="ant-col ant-col-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-qnu6hi"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <div
              class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-qnu6hi"
            >
              <div
                class="ant-card-cover"
              >
                <img
                  alt="test/name"
                  src="https://image.tmdb.org/t/p/w500/image"
                />
              </div>
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-card-meta"
                >
                  <div
                    class="ant-card-meta-detail"
                  >
                    <div
                      class="ant-card-meta-title"
                    >
                      test/name
                    </div>
                    <div
                      class="ant-card-meta-description"
                    >
                      test/character
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 top-margin text-center css-dev-only-do-not-override-qnu6hi"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-qnu6hi ant-btn-primary ant-btn-background-ghost"
          type="button"
        >
          <span>
            Full Cast & Crew
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MovieDetails component should match snapshot with empty movie 1`] = `
<DocumentFragment>
  <div
    class="css-dev-only-do-not-override-qnu6hi ant-empty ant-empty-normal"
  >
    <div
      class="ant-empty-image"
    >
      <svg
        height="41"
        viewBox="0 0 64 41"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Simple Empty
        </title>
        <g
          fill="none"
          fill-rule="evenodd"
          transform="translate(0 1)"
        >
          <ellipse
            cx="32"
            cy="33"
            fill="#f5f5f5"
            rx="32"
            ry="7"
          />
          <g
            fill-rule="nonzero"
            stroke="#d9d9d9"
          >
            <path
              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
            />
            <path
              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
              fill="#fafafa"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      Movie not found
    </div>
  </div>
</DocumentFragment>
`;

exports[`MovieDetails component should match snapshot with error 1`] = `
<DocumentFragment>
  <div
    class="container top-margin"
  >
    <div
      class="ant-result ant-result-error css-dev-only-do-not-override-qnu6hi"
    >
      <div
        class="ant-result-icon"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-result-title"
      >
        Something went wrong!
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MovieDetails component should match snapshot with loading 1`] = `
<DocumentFragment>
  <div
    class="container top-margin"
  >
    <div
      class="ant-row ant-row-center top-margin css-dev-only-do-not-override-qnu6hi"
    >
      <div
        class="ant-col css-dev-only-do-not-override-qnu6hi"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning css-dev-only-do-not-override-qnu6hi"
        >
          <span
            class="ant-spin-dot-holder"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MovieDetails component should match snapshot with open popover 1`] = `
<DocumentFragment>
  <div
    class="ant-row css-dev-only-do-not-override-qnu6hi"
  >
    <div
      class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
    >
      <div
        class="ant-carousel css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="slick-slider slick-initialized"
          dir="ltr"
        >
          <div
            class="slick-list"
          >
            <div
              class="slick-track"
              style="opacity: 1;"
            >
              <div
                aria-hidden="false"
                class="slick-slide slick-active slick-current"
                data-index="0"
                style="outline: none; width: 0px; position: relative; left: 0px; opacity: 1; z-index: 999; transition: opacity 700ms ease, visibility 700ms ease;"
                tabindex="-1"
              >
                <div>
                  <div
                    class="movie-image"
                    style="width: 100%; display: inline-block;"
                    tabindex="-1"
                  >
                    <img
                      alt="test/title"
                      src="https://image.tmdb.org/t/p/original/image"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <ul
            class="slick-dots slick-dots-bottom"
            style="display: block;"
          >
            <li
              class="slick-active"
            >
              <button>
                1
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    class="container top-margin"
  >
    <div
      class="ant-row css-dev-only-do-not-override-qnu6hi"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-qnu6hi ant-flex-align-center ant-flex-gap-middle"
          style="margin-bottom: 24px;"
        >
          <h1
            class="ant-typography css-dev-only-do-not-override-qnu6hi"
            style="margin-bottom: 0px;"
          >
            test/title (1999)
          </h1>
          <button
            class="ant-btn css-dev-only-do-not-override-qnu6hi ant-btn-circle ant-btn-text ant-btn-icon-only ant-popover-open"
            data-testid="addMovieToListPopover"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="plus-circle"
                class="anticon anticon-plus-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="plus-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
                  />
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-qnu6hi ant-btn-circle ant-btn-text ant-btn-icon-only"
            data-testid="addToFavoriteBtn"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="heart"
                class="anticon anticon-heart"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="heart"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M923 283.6a260.04 260.04 0 00-56.9-82.8 264.4 264.4 0 00-84-55.5A265.34 265.34 0 00679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 00-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-qnu6hi ant-btn-circle ant-btn-text ant-btn-icon-only"
            data-testid="addToWatchlistBtn"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="book"
                class="anticon anticon-book"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="book"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M832 64H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zm-260 72h96v209.9L621.5 312 572 347.4V136zm220 752H232V136h280v296.9c0 3.3 1 6.6 3 9.3a15.9 15.9 0 0022.3 3.7l83.8-59.9 81.4 59.4c2.7 2 6 3.1 9.4 3.1 8.8 0 16-7.2 16-16V136h64v752z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-qnu6hi"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          Overview
        </h3>
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          test/overview
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <img
            alt="imdb"
            height="24"
            src="test-file-stub"
            title="imdb rating"
          />
          <b>
             : 
          </b>
          <span>
            9
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Status: 
          </b>
          <span>
            test/status
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Original Language: 
          </b>
          <span>
            English
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Country: 
          </b>
          <span>
            United States of America
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Runtime: 
          </b>
          <span>
            2h 30m
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Budget: 
          </b>
          <span>
            $1,000,000
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Revenue: 
          </b>
          <span>
            $3,000,000
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Genres: 
          </b>
          <div
            class="ant-flex css-dev-only-do-not-override-qnu6hi"
            style="display: inline-flex; gap: 4px;"
          >
            <span
              class="ant-tag css-dev-only-do-not-override-qnu6hi"
            >
              TEST/GENRE
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Rating: 
          </b>
          <span
            class="ant-tag css-dev-only-do-not-override-qnu6hi"
          >
            PG-13
          </span>
        </div>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-qnu6hi ant-divider-horizontal"
        role="separator"
      />
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          Cast
        </h3>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-row css-dev-only-do-not-override-qnu6hi"
          style="margin-left: -12px; margin-right: -12px; row-gap: 16px;"
        >
          <div
            class="ant-col ant-col-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-qnu6hi"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <div
              class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-qnu6hi"
            >
              <div
                class="ant-card-cover"
              >
                <img
                  alt="test/name"
                  src="https://image.tmdb.org/t/p/w500/image"
                />
              </div>
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-card-meta"
                >
                  <div
                    class="ant-card-meta-detail"
                  >
                    <div
                      class="ant-card-meta-title"
                    >
                      test/name
                    </div>
                    <div
                      class="ant-card-meta-description"
                    >
                      test/character
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 top-margin text-center css-dev-only-do-not-override-qnu6hi"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-qnu6hi ant-btn-primary ant-btn-background-ghost"
          type="button"
        >
          <span>
            Full Cast & Crew
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MovieDetails component should match snapshot with other data 1`] = `
<DocumentFragment>
  <div
    class="ant-row css-dev-only-do-not-override-qnu6hi"
  >
    <div
      class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
    >
      <div
        class="ant-carousel css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="slick-slider slick-initialized"
          dir="ltr"
        >
          <div
            class="slick-list"
          >
            <div
              class="slick-track"
              style="opacity: 1;"
            >
              <div
                aria-hidden="false"
                class="slick-slide slick-active slick-current"
                data-index="0"
                style="outline: none; width: 0px; position: relative; left: 0px; opacity: 1; z-index: 999; transition: opacity 700ms ease, visibility 700ms ease;"
                tabindex="-1"
              >
                <div>
                  <div
                    class="movie-image"
                    style="width: 100%; display: inline-block;"
                    tabindex="-1"
                  >
                    <img
                      alt="test/title"
                      src="https://image.tmdb.org/t/p/original/image"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <ul
            class="slick-dots slick-dots-bottom"
            style="display: block;"
          >
            <li
              class="slick-active"
            >
              <button>
                1
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    class="container top-margin"
  >
    <div
      class="ant-row css-dev-only-do-not-override-qnu6hi"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-qnu6hi ant-flex-align-center ant-flex-gap-middle"
          style="margin-bottom: 24px;"
        >
          <h1
            class="ant-typography css-dev-only-do-not-override-qnu6hi"
            style="margin-bottom: 0px;"
          >
            test/title
          </h1>
          <button
            class="ant-btn css-dev-only-do-not-override-qnu6hi ant-btn-circle ant-btn-text ant-btn-icon-only"
            data-testid="addMovieToListPopover"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="plus-circle"
                class="anticon anticon-plus-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="plus-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
                  />
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-qnu6hi ant-btn-circle ant-btn-text ant-btn-icon-only"
            data-testid="addToFavoriteBtn"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="heart"
                class="anticon anticon-heart"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="heart"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M923 283.6a260.04 260.04 0 00-56.9-82.8 264.4 264.4 0 00-84-55.5A265.34 265.34 0 00679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 00-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-qnu6hi ant-btn-circle ant-btn-text ant-btn-icon-only"
            data-testid="addToWatchlistBtn"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="book"
                class="anticon anticon-book"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="book"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M832 64H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zm-260 72h96v209.9L621.5 312 572 347.4V136zm220 752H232V136h280v296.9c0 3.3 1 6.6 3 9.3a15.9 15.9 0 0022.3 3.7l83.8-59.9 81.4 59.4c2.7 2 6 3.1 9.4 3.1 8.8 0 16-7.2 16-16V136h64v752z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-qnu6hi"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <h3
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          Overview
        </h3>
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          test/overview
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <img
            alt="imdb"
            height="24"
            src="test-file-stub"
            title="imdb rating"
          />
          <b>
             : 
          </b>
          <span>
            9
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Status: 
          </b>
          <span>
            test/status
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Original Language: 
          </b>
          <span>
            English
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Country: 
          </b>
          <span>
            United States of America
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Runtime: 
          </b>
          <span>
            2h 30m
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Budget: 
          </b>
          <span>
            $1,000,000
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Revenue: 
          </b>
          <span>
            $3,000,000
          </span>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Genres: 
          </b>
          <div
            class="ant-flex css-dev-only-do-not-override-qnu6hi"
            style="display: inline-flex; gap: 4px;"
          >
            <span
              class="ant-tag css-dev-only-do-not-override-qnu6hi"
            >
              TEST/GENRE
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-qnu6hi"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-qnu6hi"
        >
          <b>
            Rating: 
          </b>
          <span
            class="ant-tag css-dev-only-do-not-override-qnu6hi"
          >
            PG-13
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
